вывод товаров с помощью json файла

--- a/catalog.html
+++ b/catalog.html
@@ -4,28 +4,28 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Каталог</title>
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <header class="header">
             <div class="container">
                 <div class="header-wrapper">
                     <div class="header-content">
-                        <a href="../index.html" class="header-logo">
-                            <img src="../img/home/logo.png" alt="" />
+                        <a href="index.html" class="header-logo">
+                            <img src="img/home/logo.png" alt="" />
                         </a>
                         <a href="catalog.html" class="header-search">
-                            <img src="../img/home/search.svg" alt="" />
+                            <img src="img/home/search.svg" alt="" />
                         </a>
                     </div>
                     <div class="header-navigation">
                         <div class="header-menu">
                             <div class="header-burger">
-                                <img src="../img/home/burger.svg" alt="" />
+                                <img src="img/home/burger.svg" alt="" />
                             </div>
                             <div class="menu">
                                 <div class="menu-close">
-                                    <img src="../img/home/close.png" alt="" />
+                                    <img src="img/home/close.png" alt="" />
                                 </div>
                                 <div class="menu-title">MENU</div>
                                 <div class="menu-wrapper">
@@ -63,11 +63,11 @@
                             </div>
                         </div>
                         <a href="registration.html" class="header-login">
-                            <img src="../img/home/login.svg" alt="" />
+                            <img src="img/home/login.svg" alt="" />
                         </a>
                         <a href="cart.html" class="header-cart">
                             <div class="header-cart__img">
-                                <img src="../img/home/cart.svg" alt="" />
+                                <img src="img/home/cart.svg" alt="" />
                             </div>
                             <div class="header-cart__overlay"></div>
                         </a>
@@ -80,7 +80,7 @@
                 <div class="breadcrumbs-wrapper">
                     <div class="breadcrumbs-title">NEW ARRIVALS</div>
                     <div class="breadcrumbs-info">
-                        <a href="../index.html" class="breadcrumbs-info__link">HOME</a> / <a href="../index.html" class="breadcrumbs-info__link">MEN</a> /
+                        <a href="index.html" class="breadcrumbs-info__link">HOME</a> / <a href="index.html" class="breadcrumbs-info__link">MEN</a> /
                         <div class="breadcrumbs-info__link_here">NEW ARRIVALS</div>
                     </div>
                 </div>
@@ -165,107 +165,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products-wrapper">
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-1.jpg" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-7.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-9.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-13.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-10.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-11.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="products-wrapper"></div>
                     <div class="products-pag">
                         <div class="products-pag__prev">
-                            <img src="../img/home/pag-left.png" alt="" />
+                            <img src="img/home/pag-left.png" alt="" />
                         </div>
                         <div class="products-pag__nums">
                             <a href="catalog.html" class="products-pag__num active">1</a>
@@ -278,7 +181,7 @@
                             <a href="catalog.html" class="products-pag__num products-pag__num_last">20</a>
                         </div>
                         <div class="products-pag__next">
-                            <img src="../img/home/pag-right.png" alt="" />
+                            <img src="img/home/pag-right.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -288,21 +191,21 @@
                     <div class="feature-wrapper">
                         <div class="feature-item">
                             <div class="feature-item__img">
-                                <img src="../img/home/feature-1.svg" alt="" />
+                                <img src="img/home/feature-1.svg" alt="" />
                             </div>
                             <div class="feature-item__title">Free Delivery</div>
                             <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                         <div class="feature-item">
                             <div class="feature-item__img">
-                                <img src="../img/home/feature-2.png" alt="" />
+                                <img src="img/home/feature-2.png" alt="" />
                             </div>
                             <div class="feature-item__title">Sales & discounts</div>
                             <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
                         </div>
                         <div class="feature-item">
                             <div class="feature-item__img">
-                                <img src="../img/home/feature-3.png" alt="" />
+                                <img src="img/home/feature-3.png" alt="" />
                             </div>
                             <div class="feature-item__title">Quality assurance</div>
                             <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
@@ -315,7 +218,7 @@
                     <div class="subscribe-wrapper">
                         <div class="subscribe-info">
                             <div class="subscribe-img">
-                                <img src="../img/home/subscribe-avatar.png" alt="" />
+                                <img src="img/home/subscribe-avatar.png" alt="" />
                             </div>
                             <div class="subscribe-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</div>
                         </div>
@@ -340,22 +243,22 @@
                         Brand All Rights Reserved.
                     </div>
                     <div class="footer-socials">
-                        <a href="../" class="footer-social fb">
-                            <img src="../img/home/fb.svg" alt="" />
+                        <a href="" class="footer-social fb">
+                            <img src="img/home/fb.svg" alt="" />
                         </a>
-                        <a href="../" class="footer-social inst">
-                            <img src="../img/home/inst.png" alt="" />
+                        <a href="" class="footer-social inst">
+                            <img src="img/home/inst.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social social">
-                            <img src="../img/home/pinterest.png" alt="" />
+                        <a href="" class="footer-social social">
+                            <img src="img/home/pinterest.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social twitter">
-                            <img src="../img/home/twitter.png" alt="" />
+                        <a href="" class="footer-social twitter">
+                            <img src="img/home/twitter.png" alt="" />
                         </a>
                     </div>
                 </div>
             </div>
         </footer>
-        <script src="../js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
