--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Товар</title>
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </head>
@@ -13,21 +13,21 @@
             <div class="container">
                 <div class="header-wrapper">
                     <div class="header-content">
-                        <a href="../index.html" class="header-logo">
-                            <img src="../img/home/logo.png" alt="" />
+                        <a href="index.html" class="header-logo">
+                            <img src="img/home/logo.png" alt="" />
                         </a>
                         <a href="catalog.html" class="header-search">
-                            <img src="../img/home/search.svg" alt="" />
+                            <img src="img/home/search.svg" alt="" />
                         </a>
                     </div>
                     <div class="header-navigation">
                         <div class="header-menu">
                             <div class="header-burger">
-                                <img src="../img/home/burger.svg" alt="" />
+                                <img src="img/home/burger.svg" alt="" />
                             </div>
                             <div class="menu">
                                 <div class="menu-close">
-                                    <img src="../img/home/close.png" alt="" />
+                                    <img src="img/home/close.png" alt="" />
                                 </div>
                                 <div class="menu-title">MENU</div>
                                 <div class="menu-wrapper">
@@ -65,11 +65,11 @@
                             </div>
                         </div>
                         <a href="registration.html" class="header-login">
-                            <img src="../img/home/login.svg" alt="" />
+                            <img src="img/home/login.svg" alt="" />
                         </a>
                         <a href="cart.html" class="header-cart">
                             <div class="header-cart__img">
-                                <img src="../img/home/cart.svg" alt="" />
+                                <img src="img/home/cart.svg" alt="" />
                             </div>
                             <div class="header-cart__overlay"></div>
                         </a>
@@ -82,7 +82,7 @@
                 <div class="breadcrumbs-wrapper">
                     <div class="breadcrumbs-title">NEW ARRIVALS</div>
                     <div class="breadcrumbs-info">
-                        <a href="../index.html" class="breadcrumbs-info__link">HOME</a> / <a href="../index.html" class="breadcrumbs-info__link">MEN</a> /
+                        <a href="index.html" class="breadcrumbs-info__link">HOME</a> / <a href="index.html" class="breadcrumbs-info__link">MEN</a> /
                         <div class="breadcrumbs-info__link_here">NEW ARRIVALS</div>
                     </div>
                 </div>
@@ -93,12 +93,12 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slide">
                         <div class="slide__img">
-                            <img src="../img/home/slider-1.png" alt="" />
+                            <img src="img/home/slider-1.png" alt="" />
                         </div>
                     </div>
                     <div class="swiper-slide slide">
                         <div class="slide__img">
-                            <img src="../img/home/slider-1.png" alt="" />
+                            <img src="img/home/slider-1.png" alt="" />
                         </div>
                     </div>
                 </div>
@@ -164,56 +164,7 @@
             </div>
             <div class="main-products products goods">
                 <div class="container">
-                    <div class="products-wrapper">
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-11.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-12.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="../img/home/products-13.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="products-wrapper"></div>
                 </div>
             </div>
             <div class="main-subscribe subscribe">
@@ -221,7 +172,7 @@
                     <div class="subscribe-wrapper">
                         <div class="subscribe-info">
                             <div class="subscribe-img">
-                                <img src="../img/home/subscribe-avatar.png" alt="" />
+                                <img src="img/home/subscribe-avatar.png" alt="" />
                             </div>
                             <div class="subscribe-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</div>
                         </div>
@@ -246,22 +197,22 @@
                         Brand All Rights Reserved.
                     </div>
                     <div class="footer-socials">
-                        <a href="../" class="footer-social fb">
-                            <img src="../img/home/fb.svg" alt="" />
+                        <a href="" class="footer-social fb">
+                            <img src="img/home/fb.svg" alt="" />
                         </a>
-                        <a href="../" class="footer-social inst">
-                            <img src="../img/home/inst.png" alt="" />
+                        <a href="" class="footer-social inst">
+                            <img src="img/home/inst.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social social">
-                            <img src="../img/home/pinterest.png" alt="" />
+                        <a href="" class="footer-social social">
+                            <img src="img/home/pinterest.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social twitter">
-                            <img src="../img/home/twitter.png" alt="" />
+                        <a href="" class="footer-social twitter">
+                            <img src="img/home/twitter.png" alt="" />
                         </a>
                     </div>
                 </div>
             </div>
         </footer>
-        <script src="../js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
