--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Регистрация</title>
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     </head>
@@ -13,21 +13,21 @@
             <div class="container">
                 <div class="header-wrapper">
                     <div class="header-content">
-                        <a href="../index.html" class="header-logo">
-                            <img src="../img/home/logo.png" alt="" />
+                        <a href="index.html" class="header-logo">
+                            <img src="img/home/logo.png" alt="" />
                         </a>
                         <a href="catalog.html" class="header-search">
-                            <img src="../img/home/search.svg" alt="" />
+                            <img src="img/home/search.svg" alt="" />
                         </a>
                     </div>
                     <div class="header-navigation">
                         <div class="header-menu">
                             <div class="header-burger">
-                                <img src="../img/home/burger.svg" alt="" />
+                                <img src="img/home/burger.svg" alt="" />
                             </div>
                             <div class="menu">
                                 <div class="menu-close">
-                                    <img src="../img/home/close.png" alt="" />
+                                    <img src="img/home/close.png" alt="" />
                                 </div>
                                 <div class="menu-title">MENU</div>
                                 <div class="menu-wrapper">
@@ -65,11 +65,11 @@
                             </div>
                         </div>
                         <a href="registration.html" class="header-login">
-                            <img src="../img/home/login.svg" alt="" />
+                            <img src="img/home/login.svg" alt="" />
                         </a>
                         <a href="cart.html" class="header-cart">
                             <div class="header-cart__img">
-                                <img src="../img/home/cart.svg" alt="" />
+                                <img src="img/home/cart.svg" alt="" />
                             </div>
                             <div class="header-cart__overlay"></div>
                         </a>
@@ -112,7 +112,7 @@
                             <div class="reg-form__text">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</div>
                             <button type="submit" class="reg-form__btn">
                                 <span>JOIN NOW</span>
-                                <img src="../img/home/reg-btn.png" alt="" />
+                                <img src="img/home/reg-btn.png" alt="" />
                             </button>
                         </form>
                         <div class="reg-info">
@@ -134,7 +134,7 @@
                     <div class="subscribe-wrapper">
                         <div class="subscribe-info">
                             <div class="subscribe-img">
-                                <img src="../img/home/subscribe-avatar.png" alt="" />
+                                <img src="img/home/subscribe-avatar.png" alt="" />
                             </div>
                             <div class="subscribe-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</div>
                         </div>
@@ -159,22 +159,22 @@
                         Brand All Rights Reserved.
                     </div>
                     <div class="footer-socials">
-                        <a href="../" class="footer-social fb">
-                            <img src="../img/home/fb.svg" alt="" />
+                        <a href="" class="footer-social fb">
+                            <img src="img/home/fb.svg" alt="" />
                         </a>
-                        <a href="../" class="footer-social inst">
-                            <img src="../img/home/inst.png" alt="" />
+                        <a href="" class="footer-social inst">
+                            <img src="img/home/inst.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social social">
-                            <img src="../img/home/pinterest.png" alt="" />
+                        <a href="" class="footer-social social">
+                            <img src="img/home/pinterest.png" alt="" />
                         </a>
-                        <a href="../" class="footer-social twitter">
-                            <img src="../img/home/twitter.png" alt="" />
+                        <a href="" class="footer-social twitter">
+                            <img src="img/home/twitter.png" alt="" />
                         </a>
                     </div>
                 </div>
             </div>
         </footer>
-        <script src="../js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
