--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <a href="index.html" class="header-logo">
                             <img src="img/home/logo.png" alt="" />
                         </a>
-                        <a href="pages/catalog.html" class="header-search">
+                        <a href="catalog.html" class="header-search">
                             <img src="img/home/search.svg" alt="" />
                         </a>
                     </div>
@@ -62,10 +62,10 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="pages/registration.html" class="header-login">
+                        <a href="registration.html" class="header-login">
                             <img src="img/home/login.svg" alt="" />
                         </a>
-                        <a href="pages/cart.html" class="header-cart">
+                        <a href="cart.html" class="header-cart">
                             <div class="header-cart__img">
                                 <img src="img/home/cart.svg" alt="" />
                             </div>
@@ -127,105 +127,8 @@
                 <div class="container">
                     <div class="products-title">Fetured Items</div>
                     <div class="products-text">Shop for items based on what we featured in this week</div>
-                    <div class="products-wrapper">
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-1.jpg" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-2.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-3.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-4.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-5.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                        <div class="products-item">
-                            <div class="products-item__img">
-                                <img src="img/home/products-6.png" alt="" />
-                                <div class="products-item__btn-wrapper">
-                                    <div class="products-item__btn">
-                                        <img src="img/home/cart.svg" alt="" />
-                                        <span>Add to Cart</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="products-item__content">
-                                <a href="pages/products.html" class="products-item__title">ELLERY X M'O CAPSULE</a>
-                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
-                                <div class="products-item__price">$52.00</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="pages/catalog.html" class="products-link">Browse All Product</a>
+                    <div class="products-wrapper"></div>
+                    <a href="catalog.html" class="products-link">Browse All Product</a>
                 </div>
             </div>
             <div class="main-feature feature">
